chore(cli): remove unused plugins and `mut` profile, update resources configuration